--- a/demo/package.json
+++ b/demo/package.json
@@ -4,18 +4,19 @@
   "description": "",
   "scripts": {
     "start": "node ../index.js 'bundle.js:npm run watch-js' 'bundle.css:npm run watch-css'",
-    "watch-js": "wrollup -c rollup.config.js",
     "build-js": "rollup -c rollup.config.js",
-    "watch-css": "stylus -u nib -w -r app.styl -o bundle.css",
+    "watch-js": "wrollup -c rollup.config.js",
     "build-css": "stylus -u nib -r app.styl -o bundle.css",
+    "watch-css": "stylus -u nib -w -r app.styl -o bundle.css",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC",
+  "license": "MIT",
   "devDependencies": {
     "nib": "^1.1.2",
     "rollup": "^0.36.1",
     "stylus": "^0.54.5",
     "wrollup": "^0.1.4"
-  }
+  },
+  "dependencies": {}
 }
