--- a/demo/package.json
+++ b/demo/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "description": "small demo using 'miru'",
   "scripts": {
-    "start": "node ../index.js 'bundle.js:npm run watch-js' 'bundle.css:npm run watch-css'",
+    "start": "rm -f bundle.* && node ../index.js 'bundle.js:npm run watch-js' 'bundle.css:npm run watch-css'",
     "build-js": "rollup -c rollup.config.js",
     "watch-js": "wrollup -c rollup.config.js",
     "watch-js-local": "node ~/code/wrollup/cli.js -c rollup.config.js",
