--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "miru",
-  "version": "0.5.2",
+  "version": "0.5.3",
   "description": "dev server with chokidar spawns, pretty error parsing, and socket events for live injections and reloads",
   "preferGlobal": "true",
   "main": "index.js",
@@ -20,7 +20,8 @@
     "chalk": "^1.1.3",
     "chokidar": "^1.6.0",
     "express": "^4.14.0",
-    "minimist": "^1.2.0"
+    "minimist": "^1.2.0",
+    "socket.io": "^1.7.2"
   },
   "devDependencies": {}
 }
