--- a/demos/webpack/package.json
+++ b/demos/webpack/package.json
@@ -1,12 +1,11 @@
 {
-  "name": "miru-demo-rollup",
+  "name": "miru-demo-webpack",
   "version": "0.0.1",
   "description": "small demo using 'miru'",
   "scripts": {
     "start": "node ../../index.js -p public -t bundle.js -t bundle.css -s 'npm run watch-js' -s 'npm run watch-css'",
-    "build-js": "rollup -c rollup.config.js",
-    "watch-js": "wrollup -c rollup.config.js",
-    "watch-js-local": "node ~/code/wrollup/cli.js -c rollup.config.js",
+    "build-js": "webpack --config webpack.config.js",
+    "watch-js": "webpack -w --config webpack.config.js",
     "build-css": "stylus -u nib -r styles/app.styl -o public/bundle.css",
     "watch-css": "stylus -u nib -w -r styles/app.styl -o public/bundle.css",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -14,10 +13,12 @@
   "author": "talmobi <talmo.christian@gmail.com>",
   "license": "MIT",
   "devDependencies": {
+    "webpack": "^1.14.0",
+    "babel-core": "^6.21.0",
+    "babel-loader": "^6.2.10",
+    "babel-preset-es2015": "^6.18.0",
     "nib": "^1.1.2",
-    "rollup": "^0.36.1",
-    "stylus": "^0.54.5",
-    "wrollup": "^0.1.18"
+    "stylus": "^0.54.5"
   },
   "dependencies": {}
 }
