updated github link

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/talmobi/trollup.git"
+    "url": "https://github.com/talmobi/miru"
   },
   "author": "talmobi <talmo.christian@gmail.com>",
   "license": "MIT",
