--- a/demos/webpack/package.json
+++ b/demos/webpack/package.json
@@ -5,7 +5,6 @@
   "scripts": {
     "start": "node ~/code/miru/index.js -p public --watch bundle.js -w bundle.css --execute 'npm run watch-js' -e 'npm run watch-less'",
     "build-js": "webpack --config webpack.config.js",
-    "watch-js": "webpack -w --config webpack.config.js",
     "watch-js": "watchify scripts/app.js -o public/bundle.js -t [ babelify --presets [ es2015 ] ] -v",
     "build-css": "stylus -u nib -r ./styles/app.styl -o ./public/bundle.css",
     "watch-less": "node lesswatch.js",
@@ -29,6 +28,7 @@
     "highlight.js": "^9.11.0",
     "less": "^2.7.2",
     "nib": "^1.1.2",
+    "strip-ansi": "^3.0.1",
     "stylus": "^0.54.5",
     "watchify": "^3.9.0",
     "webpack": "^2.4.1",
