npm scripts to test snippet/wooser cli usage

--- a/demos/webpack/package.json
+++ b/demos/webpack/package.json
@@ -10,6 +10,9 @@
     "watch-less": "node lesswatch.js",
     "watch-css": "stylus -u nib -w -r ./styles/app.styl -o ./public/bundle.css",
     "cli:watch-js": "webpack -w --entry ./scripts/app.js --output ./public/bundle.js",
+    "test-less": "lessc styles/app.less public/bundle.css 2>&1 | /Users/mollie/code/wooster/cli.js",
+    "test-webpack": "webpack --config webpack.config.js 2>&1 | /Users/mollie/code/wooster/cli.js",
+    "test-browserify": "browserify scripts/app.js -o public/bundle.js -t [ babelify --presets [ es2015 ] ] -v 2>&1 | /Users/mollie/code/wooster/cli.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "talmobi <talmo.christian@gmail.com>",
