--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
   "author": "talmobi <talmo.christian@gmail.com>",
   "license": "MIT",
   "dependencies": {
-    "chalk": "^1.1.3",
     "chokidar": "^1.6.0",
+    "cli-color": "^1.2.0",
     "express": "^4.14.0",
     "minimist": "^1.2.0",
     "socket.io": "^1.7.2"
