--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
   "author": "talmobi <talmo.christian@gmail.com>",
   "license": "MIT",
   "dependencies": {
-    "chokidar": "^1.6.0",
     "cli-color": "^1.2.0",
     "express": "^4.14.0",
+    "glob": "^7.1.2",
     "minimist": "^1.2.0",
-    "socket.io": "^1.7.2"
+    "miteru": "0.0.2",
+    "socket.io": "^1.7.2",
+    "wooster": "0.0.9"
   },
   "devDependencies": {}
 }
