--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "miru": "./cli.js"
   },
   "scripts": {
+    "build-livereload": "browserify livereload.src.js -o livereload.js -t [ babelify --presets [ es2015 ] ]",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -24,5 +25,10 @@
     "socket.io": "^1.7.2",
     "wooster": "0.0.9"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "ansi-to-html": "^0.6.2",
+    "babel-preset-es2015": "^6.24.1",
+    "babelify": "^7.3.0",
+    "browserify": "^14.4.0"
+  }
 }
