--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "miru",
   "version": "0.7.14",
-  "description": "dev server with chokidar spawns, pretty error parsing, and socket events for live injections and reloads",
+  "description": "dev server with livereloading and pretty error parsing and browser<->terminal output synchronization",
   "main": "index.js",
   "bin": {
     "miru": "./cli.js"
