--- a/package.json
+++ b/package.json
@@ -8,9 +8,6 @@
   },
   "scripts": {
     "build-miru-init-js": "browserify miru.init.src.js -o miru.init.js -t [ babelify --presets [ es2015 ] ] && echo 'success'",
-    "build-livereload": "browserify livereload.src.js -o livereload.js -t [ babelify --presets [ es2015 ] ] && echo 'success'",
-    "watch-lr": "miteru -e 'npm run build-livereload' livereload.src.js",
-    "watch-livereload": "watchify livereload.src.js -o livereload.js -vt [ babelify --presets [ es2015 ] ]",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -24,7 +21,7 @@
     "express": "^4.14.0",
     "glob": "^7.1.2",
     "minimist": "^1.2.0",
-    "miteru": "0.0.2",
+    "miteru": "^0.1.2",
     "socket.io": "^1.7.2",
     "socket.io-client": "^2.0.3",
     "wooster": "0.0.11"
@@ -35,6 +32,7 @@
     "babelify": "^7.3.0",
     "browserify": "^14.4.0",
     "miteru": "0.0.2",
+    "spacestandard": "0.0.6",
     "watchify": "^3.9.0"
   }
 }
