--- a/package.json
+++ b/package.json
@@ -21,17 +21,15 @@
     "express": "^4.14.0",
     "glob": "^7.1.2",
     "minimist": "^1.2.0",
-    "miteru": "^0.1.2",
+    "miteru": "^0.1.3",
     "socket.io": "^1.7.2",
     "socket.io-client": "^2.0.3",
-    "wooster": "0.0.11"
+    "wooster": "^0.1.2"
   },
   "devDependencies": {
-    "ansi-to-html": "^0.6.2",
     "babel-preset-es2015": "^6.24.1",
     "babelify": "^7.3.0",
     "browserify": "^14.4.0",
-    "miteru": "0.0.2",
     "spacestandard": "0.0.6",
     "watchify": "^3.9.0"
   }
