--- a/package.json
+++ b/package.json
@@ -2,12 +2,32 @@
   "name": "miru",
   "version": "0.8.1",
   "description": "dev server with livereloading and pretty error parsing and browser<->terminal output synchronization",
-  "main": "index.js",
+  "main": "cli.js",
   "bin": {
     "miru": "./cli.js"
   },
+  "files": [
+    "cli.js",
+    "dist/miru.js",
+    "dist/miru-connect.js",
+    "dist/pesticide.css",
+    "dist/favicon.png"
+  ],
   "scripts": {
-    "build-miru-init-js": "browserify miru.init.src.js -o miru.init.js -t [ babelify --presets [ es2015 ] ] && echo 'success'",
+    "build": "npm run build:server && npm run build:client",
+    "build:server": "browserify --node --no-bundle-external -t [ babelify --presets [ es2015 ] ] src/server/miru.js -o dist/miru.js",
+    "build:client": "browserify -t [ babelify --presets [ es2015 ] ] src/client/main.js -o dist/miru-connect.js 2>&1 | wooster",
+    "watch:client": "watchify -v -t [ babelify --presets [ es2015 ] ] src/client/main.js -o dist/miru-connect.js 2>&1 | wooster",
+    "build:stage:js": "browserify -t [ babelify --presets [ es2015 ] ] test/stage/app.js -o test/stage/bundle.js",
+    "watch:stage:js": "watchify -v --debug -t [ babelify --presets [ es2015 ] ] test/stage/app.js -o test/stage/bundle.js",
+    "build:stage:css": "stylus -u nib -r test/stage/app.styl -o test/stage/bundle.css",
+    "watch:stage:css": "stylus -w -u nib -r test/stage/app.styl -o test/stage/bundle.css",
+    "dev:css": "node src/server/miru.js -w [ npm run watch:stage:css, test/stage/bundle.css ] -v -p test/stage/ --development",
+    "dev:js": "node src/server/miru.js -w [ npm run watch:stage:js, test/stage/bundle.js ] -v -p test/stage/ --development",
+    "dev": "node src/server/miru.js -w [ npm run watch:stage:js, test/stage/bundle.js ] -w [ npm run watch:stage:css, test/stage/bundle.css ] -p test/stage/ --development",
+    "dev2": "node dist/miru.js -w [ npm run watch:stage:js, test/stage/bundle.js ] -w [ npm run watch:stage:css, test/stage/bundle.css ] -p test/stage/ --development",
+    "cli": "./cli.js -w [ npm run watch:stage:js, test/stage/bundle.js ] -w [ npm run watch:stage:css, test/stage/bundle.css ] -p test/stage/ --development",
+    "lint": "spacestandard src/**/*.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -17,20 +37,33 @@
   "author": "talmobi <talmo.christian@gmail.com>",
   "license": "MIT",
   "dependencies": {
-    "cli-color": "^1.2.0",
-    "express": "^4.14.0",
-    "glob": "^7.1.2",
-    "minimist": "^1.2.0",
-    "miteru": "^0.1.3",
-    "socket.io": "^1.7.2",
-    "socket.io-client": "^2.0.3",
-    "wooster": "^0.1.2"
+    "ansi-to-html": "~0.6.3",
+    "cli-color": "~1.2.0",
+    "cors": "~2.8.4",
+    "express": "~4.14.0",
+    "miteru": "~0.4.3",
+    "redom": "~3.4.0",
+    "socket.io": "~2.0.4",
+    "socket.io-client": "~2.0.4",
+    "string-width": "~2.1.1",
+    "subarg": "~1.0.0",
+    "ua-parser-js": "~0.7.17",
+    "useragent": "~2.2.1",
+    "wooster": "~0.3.2"
   },
   "devDependencies": {
-    "babel-preset-es2015": "^6.24.1",
-    "babelify": "^7.3.0",
-    "browserify": "^14.4.0",
+    "babel-preset-es2015": "~6.24.1",
+    "babelify": "~7.3.0",
+    "brfs": "~1.4.3",
+    "browserify": "~14.4.0",
+    "mkdirp": "~0.5.1",
+    "ncp": "~2.0.0",
+    "nib": "~1.1.2",
+    "rimraf": "~2.6.2",
     "spacestandard": "0.0.6",
-    "watchify": "^3.9.0"
+    "stylus": "~0.54.5",
+    "bufferutil": "~3.0.3",
+    "utf-8-validate": "~3.0.4",
+    "watchify": "~3.9.0"
   }
 }
