updated .gitignore with dist bundles ( ignoring dist/miru.js and dist/miru-connect.js )

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,15 @@
 node_modules
 
+# vim temp files
 *.sw?
+
+# mac files
 *.DS_Store
 
 npm-debug*
 
 trash
+
+# ignore dist bundles
+dist/miru.js
+dist/miru-connect.js
