removed unsued dependencies, added uglify npm script ( minification ), updated babel preset dependencies ( babel-preset-env and babel-core instead of babel-preset-es2015 )

--- a/package.json
+++ b/package.json
@@ -15,20 +15,28 @@
     "dist/favicon.png"
   ],
   "scripts": {
+    "prepublish": "npm run build && npm run pass",
     "build": "npm run build:server && npm run build:client",
-    "build:server": "browserify --node --no-bundle-external -t [ babelify --presets [ es2015 ] ] src/server/miru.js -o dist/miru.js",
-    "build:client": "browserify -t [ babelify --presets [ es2015 ] ] src/client/main.js -o dist/miru-connect.js 2>&1 | wooster",
-    "watch:client": "watchify -v -t [ babelify --presets [ es2015 ] ] src/client/main.js -o dist/miru-connect.js 2>&1 | wooster",
-    "build:stage:js": "browserify -t [ babelify --presets [ es2015 ] ] test/stage/app.js -o test/stage/bundle.js",
-    "watch:stage:js": "watchify -v --debug -t [ babelify --presets [ es2015 ] ] test/stage/app.js -o test/stage/bundle.js",
+    "postbuild": "npm run uglify",
+    "uglify": "npm run uglify:client && npm run uglify:server",
+    "postuglify": "npm run pass",
+    "uglify:server": "uglifyjs dist/miru.js -cmo dist/miru.js",
+    "uglify:client": "uglifyjs dist/miru-connect.js -cmo dist/miru-connect.js",
+    "build:server": "browserify --node --no-bundle-external -t [ babelify --presets [ env ] ] src/server/miru.js -o dist/miru.js",
+    "build:client": "browserify -t [ babelify --presets [ env ] ] src/client/main.js -o dist/miru-connect.js 2>&1 | wooster",
+    "watch:client": "watchify -v -t [ babelify --presets [ env ] ] src/client/main.js -o dist/miru-connect.js 2>&1 | wooster",
+    "build:stage:js": "browserify -t [ babelify --presets [ env ] ] test/stage/app.js -o test/stage/bundle.js",
+    "watch:stage:js": "watchify -v --debug -t [ babelify --presets [ env ] ] test/stage/app.js -o test/stage/bundle.js",
     "build:stage:css": "stylus -u nib -r test/stage/app.styl -o test/stage/bundle.css",
     "watch:stage:css": "stylus -w -u nib -r test/stage/app.styl -o test/stage/bundle.css",
     "dev:css": "node src/server/miru.js -w [ npm run watch:stage:css, test/stage/bundle.css ] -v -p test/stage/ --development",
     "dev:js": "node src/server/miru.js -w [ npm run watch:stage:js, test/stage/bundle.js ] -v -p test/stage/ --development",
     "dev": "node src/server/miru.js -w [ npm run watch:stage:js, test/stage/bundle.js ] -w [ npm run watch:stage:css, test/stage/bundle.css ] -p test/stage/ --development",
-    "dev2": "node dist/miru.js -w [ npm run watch:stage:js, test/stage/bundle.js ] -w [ npm run watch:stage:css, test/stage/bundle.css ] -p test/stage/ --development",
+    "dev:dist": "node dist/miru.js -w [ npm run watch:stage:js, test/stage/bundle.js ] -w [ npm run watch:stage:css, test/stage/bundle.css ] -p test/stage/ --development",
     "cli": "./cli.js -w [ npm run watch:stage:js, test/stage/bundle.js ] -w [ npm run watch:stage:css, test/stage/bundle.css ] -p test/stage/ --development",
     "lint": "spacestandard src/**/*.js",
+    "pass": "passlint dist/*.js",
+    "pretest": "npm run pass",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -49,22 +57,24 @@
     "string-width": "~2.1.1",
     "subarg": "~1.0.0",
     "ua-parser-js": "~0.7.17",
-    "useragent": "~2.2.1",
     "wooster": "~0.3.2"
   },
   "devDependencies": {
-    "babel-preset-es2015": "~6.24.1",
+    "babel-core": "~6.26.0",
+    "babel-preset-env": "~1.6.1",
     "babelify": "~7.3.0",
     "brfs": "~1.4.3",
-    "browserify": "~14.4.0",
+    "browserify": "~14.5.0",
+    "faucet": "0.0.1",
     "mkdirp": "~0.5.1",
     "ncp": "~2.0.0",
     "nib": "~1.1.2",
+    "passlint": "0.0.13",
     "rimraf": "~2.6.2",
     "spacestandard": "0.0.6",
     "stylus": "~0.54.5",
-    "bufferutil": "~3.0.3",
-    "utf-8-validate": "~3.0.4",
+    "tape": "~4.8.0",
+    "uglify-js": "~3.1.10",
     "watchify": "~3.9.0"
   }
 }
