reordered npm scripts for better consistency

--- a/package.json
+++ b/package.json
@@ -18,22 +18,21 @@
     "prepublish": "npm run build && npm run pass",
     "build": "npm run build:server && npm run build:client",
     "postbuild": "npm run uglify",
+    "build:server": "browserify --node --no-bundle-external -t [ babelify --presets [ env ] ] src/server/miru.js -o dist/miru.js",
+    "build:client": "browserify -t [ babelify --presets [ env ] ] src/client/main.js -o dist/miru-connect.js 2>&1 | wooster",
+    "watch:client": "watchify -v -t [ babelify --presets [ env ] ] src/client/main.js -o dist/miru-connect.js 2>&1 | wooster",
     "uglify": "npm run uglify:client && npm run uglify:server",
     "postuglify": "npm run pass",
     "uglify:server": "uglifyjs dist/miru.js -cmo dist/miru.js",
     "uglify:client": "uglifyjs dist/miru-connect.js -cmo dist/miru-connect.js",
-    "build:server": "browserify --node --no-bundle-external -t [ babelify --presets [ env ] ] src/server/miru.js -o dist/miru.js",
-    "build:client": "browserify -t [ babelify --presets [ env ] ] src/client/main.js -o dist/miru-connect.js 2>&1 | wooster",
-    "watch:client": "watchify -v -t [ babelify --presets [ env ] ] src/client/main.js -o dist/miru-connect.js 2>&1 | wooster",
+    "dev:css": "node src/server/miru.js -w [ npm run watch:stage:css, test/stage/bundle.css ] -v -p test/stage/ --development",
+    "dev:js": "node src/server/miru.js -w [ npm run watch:stage:js, test/stage/bundle.js ] -v -p test/stage/ --development",
+    "dev": "node src/server/miru.js -w [ npm run watch:stage:js, test/stage/bundle.js ] -w [ npm run watch:stage:css, test/stage/bundle.css ] -p test/stage/ --development",
+    "dev:dist": "./cli.js -w [ npm run watch:stage:js, test/stage/bundle.js ] -w [ npm run watch:stage:css, test/stage/bundle.css ] -p test/stage/ --development",
     "build:stage:js": "browserify -t [ babelify --presets [ env ] ] test/stage/app.js -o test/stage/bundle.js",
     "watch:stage:js": "watchify -v --debug -t [ babelify --presets [ env ] ] test/stage/app.js -o test/stage/bundle.js",
     "build:stage:css": "stylus -u nib -r test/stage/app.styl -o test/stage/bundle.css",
     "watch:stage:css": "stylus -w -u nib -r test/stage/app.styl -o test/stage/bundle.css",
-    "dev:css": "node src/server/miru.js -w [ npm run watch:stage:css, test/stage/bundle.css ] -v -p test/stage/ --development",
-    "dev:js": "node src/server/miru.js -w [ npm run watch:stage:js, test/stage/bundle.js ] -v -p test/stage/ --development",
-    "dev": "node src/server/miru.js -w [ npm run watch:stage:js, test/stage/bundle.js ] -w [ npm run watch:stage:css, test/stage/bundle.css ] -p test/stage/ --development",
-    "dev:dist": "node dist/miru.js -w [ npm run watch:stage:js, test/stage/bundle.js ] -w [ npm run watch:stage:css, test/stage/bundle.css ] -p test/stage/ --development",
-    "cli": "./cli.js -w [ npm run watch:stage:js, test/stage/bundle.js ] -w [ npm run watch:stage:css, test/stage/bundle.css ] -p test/stage/ --development",
     "lint": "spacestandard src/**/*.js",
     "pass": "passlint dist/*.js",
     "pretest": "npm run pass",
