refactor npm dev scripts

--- a/package.json
+++ b/package.json
@@ -25,10 +25,11 @@
     "postuglify": "npm run pass",
     "uglify:server": "uglifyjs dist/miru.js -cmo dist/miru.js",
     "uglify:client": "uglifyjs dist/miru-connect.js -cmo dist/miru-connect.js",
-    "dev:css": "node src/server/miru.js -w [ npm run watch:stage:css, test/stage/bundle.css ] -v -p test/stage/ --development",
-    "dev:js": "node src/server/miru.js -w [ npm run watch:stage:js, test/stage/bundle.js ] -v -p test/stage/ --development",
-    "dev": "node src/server/miru.js -w [ npm run watch:stage:js, test/stage/bundle.js ] -w [ npm run watch:stage:css, test/stage/bundle.css ] -p test/stage/ --development",
-    "dev:dist": "./cli.js -w [ npm run watch:stage:js, test/stage/bundle.js ] -w [ npm run watch:stage:css, test/stage/bundle.css ] -p test/stage/ --development",
+    "dev:css": "node src/server/miru.js -v -p test/stage/ --development -w [ npm run watch:stage:css, test/stage/bundle.css ]",
+    "dev:js": "node src/server/miru.js -v -p test/stage/ --development -w [ npm run watch:stage:js, test/stage/bundle.js ]",
+    "dev": "node src/server/miru.js -v -p test/stage/ --development -w [ npm run watch:stage:js, test/stage/bundle.js ] -w [ npm run watch:stage:css, test/stage/bundle.css ]",
+    "dev:dist": "./cli.js -v -p test/stage/ --development -w [ npm run watch:stage:js, test/stage/bundle.js ] -w [ npm run watch:stage:css, test/stage/bundle.css ]",
+    "cli": "./cli.js -p test/stage/ --development -w [ npm run watch:stage:js, test/stage/bundle.js ] -w [ npm run watch:stage:css, test/stage/bundle.css ]",
     "build:stage:js": "browserify -t [ babelify --presets [ env ] ] test/stage/app.js -o test/stage/bundle.js",
     "watch:stage:js": "watchify -v --debug -t [ babelify --presets [ env ] ] test/stage/app.js -o test/stage/bundle.js",
     "build:stage:css": "stylus -u nib -r test/stage/app.styl -o test/stage/bundle.css",
