--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "miru",
   "version": "0.8.1",
-  "description": "dev server with livereloading and pretty error parsing and browser<->terminal output synchronization",
+  "description": "web development server for bundlers and/or static files, parses terminal and DOM errors ( inline sourcemaps supported )",
   "main": "cli.js",
   "bin": {
     "miru": "./cli.js"
