--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
     "build": "npm run build:server && npm run build:client",
     "postbuild": "npm run uglify",
     "build:server": "browserify --node --no-bundle-external -t [ babelify --presets [ env ] ] src/server/miru.js -o dist/miru.js",
-    "build:client": "browserify --im -t [ babelify --presets [ env ] ] src/client/main.js -o dist/miru-connect.js 2>&1 | wooster",
-    "watch:client": "watchify --im -v -t [ babelify --presets [ env ] ] src/client/main.js -o dist/miru-connect.js 2>&1 | wooster",
+    "build:client": "browserify -t [ babelify --presets [ env ] ] src/client/main.js -o dist/miru-connect.js 2>&1 | wooster",
+    "watch:client": "watchify -v -t [ babelify --presets [ env ] ] src/client/main.js -o dist/miru-connect.js 2>&1 | wooster",
     "uglify": "npm run uglify:client && npm run uglify:server",
     "postuglify": "npm run pass",
     "uglify:server": "uglifyjs dist/miru.js -cmo dist/miru.js",
@@ -52,7 +52,7 @@
     "cors": "~2.8.4",
     "dasu": "0.0.22",
     "express": "~4.14.0",
-    "kiite": "0.0.1",
+    "kiite": "0.0.3",
     "miteru": "~0.6.1",
     "redom": "~3.4.0",
     "string-width": "~2.1.1",
