refactored npm scripts, building client with --bare ( no need for uint8 which was failing and causing errores on ie9 ), added deps:client script to list client (miru-connect.js) dependencies

--- a/package.json
+++ b/package.json
@@ -16,10 +16,11 @@
   ],
   "scripts": {
     "prepublish": "npm run build && npm run pass",
-    "build": "npm run build:server && npm run build:client",
-    "postbuild": "npm run uglify",
+    "build": "npm run build:source && npm run uglify",
+    "build:source": "npm run build:server && npm run build:client",
     "build:server": "browserify --node --no-bundle-external -t [ babelify --presets [ env ] ] src/server/miru.js -o dist/miru.js",
-    "build:client": "browserify -t [ babelify --presets [ env ] ] src/client/main.js -o dist/miru-connect.js 2>&1 | wooster",
+    "build:client": "browserify --bare -t [ babelify --presets [ env ] ] src/client/main.js -o dist/miru-connect.js 2>&1 | wooster",
+    "deps:client": "browserify --list --bare -t [ babelify --presets [ env ] ] src/client/main.js -o dist/miru-connect.js",
     "watch:client": "watchify -v -t [ babelify --presets [ env ] ] src/client/main.js -o dist/miru-connect.js 2>&1 | wooster",
     "uglify": "npm run uglify:client && npm run uglify:server",
     "postuglify": "npm run pass",
