refactored relative paths and bundling

--- a/package.json
+++ b/package.json
@@ -12,13 +12,14 @@
     "dist/miru-connect.js",
     "dist/index.html",
     "dist/pesticide.css",
-    "dist/favicon.png"
+    "dist/favicon.png",
+    "dist/usage.txt"
   ],
   "scripts": {
     "prepublish": "npm run build && npm run pass",
     "build": "npm run build:source && npm run uglify",
-    "build:source": "npm run build:server && npm run build:client",
-    "build:server": "browserify --node --no-bundle-external -t [ babelify --presets [ env ] ] src/server/miru.js -o dist/miru.js",
+    "build:source": "npm run build:client && npm run build:server",
+    "build:server": "browserify --node --no-bundle-external --standalone miru -t [ babelify --presets [ env ] ] src/server/miru.js -o dist/miru.js",
     "build:client": "browserify --bare -t [ babelify --presets [ env ] ] src/client/main.js -o dist/miru-connect.js 2>&1 | wooster",
     "deps:client": "browserify --list --bare -t [ babelify --presets [ env ] ] src/client/main.js -o dist/miru-connect.js",
     "watch:client": "watchify -v -t [ babelify --presets [ env ] ] src/client/main.js -o dist/miru-connect.js 2>&1 | wooster",
