--- a/package.json
+++ b/package.json
@@ -52,10 +52,13 @@
     "body-parser": "~1.18.2",
     "cli-color": "~1.2.0",
     "cors": "~2.8.4",
+    "cross-spawn": "~6.0.3",
     "dasu": "0.0.22",
     "express": "~4.14.0",
+    "find-root": "~1.1.0",
     "kiite": "0.0.6",
     "miteru": "~0.6.5",
+    "npm-which": "~3.0.1",
     "redom": "~3.4.0",
     "string-width": "~2.1.1",
     "subarg": "~1.0.0",
